--- a/contrib/gitian-descriptors/gitian-linux.yml
+++ b/contrib/gitian-descriptors/gitian-linux.yml
@@ -33,7 +33,7 @@ packages:
 - "ca-certificates"
 - "python3"
 remotes:
-- "url": "https://github.com/bontecoin-bonte/bontecoin.git"
+- "url": "https://github.com/bontecoin/BONTE.git"
   "dir": "bontecoin"
 files: []
 script: |
