--- a/contrib/gitian-descriptors/gitian-win.yml
+++ b/contrib/gitian-descriptors/gitian-win.yml
@@ -24,7 +24,7 @@ packages:
 - "python3"
 - "rename"
 remotes:
-- "url": "https://github.com/bontecoin-bonte/bontecoin.git"
+- "url": "https://github.com/bontecoin/BONTE.git"
   "dir": "bontecoin"
 files: []
 script: |
