--- a/contrib/debian/control
+++ b/contrib/debian/control
@@ -28,7 +28,7 @@ Build-Depends: debhelper,
  libzmq3-dev,
  dh-systemd
 Standards-Version: 3.9.2
-Homepage: http://www.bontecoin.cc
+Homepage: http://www.bontecoin.com
 Vcs-Git: git://github.com/bontecoin/BONTE.git
 Vcs-Browser: https://github.com/bontecoin/BONTE
 
